--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Server
+name: Deploy
 
 on:
   push:
@@ -21,7 +21,7 @@ env:
   TF_WORKSPACE: ${{ inputs.channel || github.ref_name }}
 
 concurrency:
-  group: "deploy-server-${{ inputs.channel || github.ref_name }}"
+  group: "deploy-${{ inputs.channel || github.ref_name }}"
   cancel-in-progress: false
 
 jobs:
