--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-name: "Release"
+name: Release
 
 on:
   workflow_dispatch:
     inputs:
       increment:
-        description: "Type of version increment."
+        description: Type of version increment.
         required: true
         type: choice
         options:
@@ -13,7 +13,7 @@ on:
           - stable
 
 concurrency:
-  group: "release"
+  group: release
   cancel-in-progress: false
 
 jobs:
@@ -30,8 +30,8 @@ jobs:
         uses: nguyenvukhang/semver-increment@v1
         with:
           increment: ${{ inputs.increment == 'stable' && 'patch' || inputs.increment }}
-          identifier: "beta"
-          version-file: "Cargo.toml"
+          identifier: beta
+          version-file: Cargo.toml
           version-regex: '^version = "(.*)"'
 
       - uses: dtolnay/rust-toolchain@stable
