--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,11 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Apply Terraform
-        run: nix run .?submodules=1#tf-apply
+      - run: nix run .#tf-universal-apply
+        env:
+          - TF_WORKSPACE: default
+
+      - run: nix run .#tf-channel-apply
 
       - uses: EndBug/add-and-commit@v9
         with:
