--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
 
       - run: nix run .#tf-universal-apply
         env:
-          - TF_WORKSPACE: default
+          TF_WORKSPACE: default
 
       - run: nix run .#tf-channel-apply
 
