--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,6 @@ updates:
     schedule:
       interval: monthly
   - package-ecosystem: terraform
-    directory: /
+    directory: /deployments/environments/common
     schedule:
       interval: monthly
