--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bitflags = "2.5.0"
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.5"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
