--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,12 @@ on:
       ref:
         required: true
         type: string
+      run_terraform:
+        required: false
+        type: boolean
+      run_deploy:
+        required: false
+        type: boolean
   workflow_dispatch:
 
 env:
@@ -27,8 +33,39 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
+  apply-terraform:
     runs-on: ubuntu-latest
+    if: inputs.run_terraform != false
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref || github.ref }}
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DO_SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+
+      - uses: DeterminateSystems/nix-installer-action@main
+
+      - name: Apply universal
+        run: nix run .#tf-universal-apply
+        env:
+          TF_WORKSPACE: default
+
+      - name: Apply channel
+        run: nix run .#tf-channel-apply
+
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: update terraform output"
+          default_author: github_actions
+
+  deploy:
+    needs: apply-terraform
+    runs-on: ubuntu-latest
+    if: inputs.run_deploy != false
     steps:
       - uses: actions/checkout@v4
         with:
@@ -42,17 +79,6 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
 
       - uses: DeterminateSystems/nix-installer-action@main
-
-      - run: nix run .#tf-universal-apply
-        env:
-          TF_WORKSPACE: default
-
-      - run: nix run .#tf-channel-apply
-
-      - uses: EndBug/add-and-commit@v9
-        with:
-          message: "chore: update terraform output"
-          default_author: github_actions
 
       - name: Deploy
         run: nix-shell -p deploy-rs --command "deploy .?submodules=1#unavi-server-${{ env.TF_WORKSPACE }} --skip-checks"
