--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  apply-terraform:
-    secrets: inherit
-    uses: ./.github/workflows/deploy.yml
-    with:
-      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
-      disable-deploy: true
-
   version:
-    needs: apply-terraform
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.semver.outputs.version }}
@@ -59,28 +51,43 @@ jobs:
           new_branch: release/v${{ steps.semver.outputs.version }}
           tag: v${{ steps.semver.outputs.version }} --force
 
-  build-nix:
-    needs: version
-    uses: ./.github/workflows/build-nix.yml
-    with:
-      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
-      ref: v${{ needs.version.outputs.version }}
-
-  build-windows:
-    needs: version
-    uses: ./.github/workflows/build-windows.yml
-    with:
-      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
-      ref: v${{ needs.version.outputs.version }}
-
-  deploy:
+  terraform:
     needs: version
     secrets: inherit
     uses: ./.github/workflows/deploy.yml
     with:
       channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
       ref: release/v${{ needs.version.outputs.version }}
-      disable-terraform: false
+      disable-deploy: true
+
+  build-nix:
+    needs:
+      - terraform
+      - version
+    uses: ./.github/workflows/build-nix.yml
+    with:
+      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
+      ref: release/v${{ needs.version.outputs.version }}
+
+  build-windows:
+    needs:
+      - terraform
+      - version
+    uses: ./.github/workflows/build-windows.yml
+    with:
+      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
+      ref: release/v${{ needs.version.outputs.version }}
+
+  deploy:
+    needs:
+      - terraform
+      - version
+    secrets: inherit
+    uses: ./.github/workflows/deploy.yml
+    with:
+      channel: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
+      ref: release/v${{ needs.version.outputs.version }}
+      disable-terraform: true
 
   release:
     needs:
