--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,6 @@ concurrency:
 jobs:
   apply-terraform:
     runs-on: ubuntu-latest
-    if: inputs.disable-terraform != true
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,15 +44,18 @@ jobs:
 
       - uses: DeterminateSystems/nix-installer-action@main
 
-      - name: Apply universal
+      - if: inputs.disable-terraform != true
+        name: Apply universal
         run: nix run .#tf-universal-apply
         env:
           TF_WORKSPACE: default
 
-      - name: Apply channel
+      - if: inputs.disable-terraform != true
+        name: Apply channel
         run: nix run .#tf-channel-apply
 
-      - uses: EndBug/add-and-commit@v9
+      - if: inputs.disable-terraform != true
+        uses: EndBug/add-and-commit@v9
         with:
           message: "chore: update terraform output"
           default_author: github_actions
