--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       - run: nix develop -c cargo clippy --all-features --fix --no-deps
       - run: nix develop -c cargo fmt --all
       - run: nix develop -c prettier -w .
+      - run: nix fmt .
       - run: nix run .#tf-format
       - uses: EndBug/add-and-commit@v9
         with:
