--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -43,6 +43,6 @@ xwt-web-sys = "0.6.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 self_update = { version = "0.39.0", features = ["archive-zip"] }
-surrealdb = { workspace = true, features = ["kv-speedb"] }
+surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 wtransport.workspace = true
