--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -15,7 +15,7 @@ dwn.workspace = true
 rcgen = "0.13.0" 
 serde.workspace = true
 serde_json.workspace = true
-surrealdb = { workspace = true, features = ["kv-speedb"] }
+surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 time = "0.3.30"
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tower-http = { version = "0.5.2", features = ["fs"] }
