--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -17,7 +17,7 @@ serde.workspace = true
 serde_json.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 time = "0.3.30"
-tokio = { workspace = true, features = ["rt-multi-thread"] }
+tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tower-http = { version = "0.5.2", features = ["fs"] }
 tracing-subscriber.workspace = true
 tracing.workspace = true
