--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,6 @@ on:
         type: string
       ref:
         type: string
-      disable-terraform:
-        type: boolean
       disable-deploy:
         type: boolean
   workflow_dispatch:
@@ -29,7 +27,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  terraform:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -45,40 +43,19 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - if: inputs.disable-terraform != true
-        name: Apply universal
+      - name: Apply universal
         run: nix run .#tf-universal-apply
         env:
           TF_WORKSPACE: default
 
-      - if: inputs.disable-terraform != true
-        name: Apply channel
+      - name: Apply channel
         run: nix run .#tf-channel-apply
 
-      - if: inputs.disable-terraform != true
-        uses: EndBug/add-and-commit@v9
+      - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: update terraform output"
           default_author: github_actions
 
-  deploy:
-    needs: terraform
-    runs-on: ubuntu-latest
-    if: inputs.disable-deploy != true
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.ref || github.ref }}
-          submodules: true
-
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DIGITALOCEAN_SSH_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-
       - name: Deploy
+        if: inputs.disable-deploy != true
         run: nix-shell -p deploy-rs --command "deploy .?submodules=1#unavi-server-${{ env.TF_WORKSPACE }} --skip-checks"
