refactor web deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,4 @@ jobs:
 
       - name: Deploy
         if: inputs.disable-deploy != true
-        run: nix-shell -p deploy-rs --command "deploy .?submodules=1#unavi-server-${{ env.TF_WORKSPACE }} --skip-checks"
+        run: nix-shell -p deploy-rs --command "deploy .?submodules=1#${{ env.TF_WORKSPACE }} --skip-checks"
