--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: release/v${{ needs.version.outputs.version }}
+          ref: main
 
       - name: Git config
         run: |
@@ -109,8 +109,6 @@ jobs:
 
       - name: Merge release into main
         run: |
-          git checkout main
-          git pull origin main
           git merge --no-ff --no-edit v${{ needs.version.outputs.version }}
           git push origin main
 
