--- a/components/unavi-system/Cargo.toml
+++ b/components/unavi-system/Cargo.toml
@@ -6,13 +6,12 @@ repository.workspace = true
 license.workspace = true
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [lints]
 workspace = true
 
 [dependencies]
-bitflags.workspace = true
 wit-bindgen-rt.workspace = true
 
 [package.metadata.component]
@@ -20,8 +19,4 @@ package = "unavi:system"
 
 [package.metadata.component.target.dependencies]
 "unavi:ui" = { path = "../unavi-ui/wit" }
-"wired:input" = { path = "../../wired-protocol/spatial/wired-input" }
-"wired:log" = { path = "../../wired-protocol/spatial/wired-log" }
-"wired:math" = { path = "../../wired-protocol/spatial/wired-math" }
 "wired:script" = { path = "../../wired-protocol/spatial/wired-script" }
-"wired:spatial" = { path = "../../wired-protocol/spatial/wired-spatial" }
