--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,18 +15,18 @@ license = "GPL-3.0-or-later"
 type_complexity = "allow"
 
 [workspace.dependencies]
-bitflags = "2.5.0"
+wired-protocol = { path = "crates/wired-protocol" }
+
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
-dwn = "0.0.5"
+dwn = "0.0.6"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-wired-protocol = { path = "crates/wired-protocol" }
-wit-bindgen-rt = "0.20.0"
+wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
 wtransport = "0.1.8"
 
 [profile.dev]
@@ -44,7 +44,5 @@ codegen-units = 1
 opt-level = "z"
 
 [patch.crates-io]
-dwn = { git = "https://github.com/unavi-xyz/dwn.git" }
-dwn-server = { git = "https://github.com/unavi-xyz/dwn.git" }
-wasm-bridge = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
-wasm-bridge-wasi = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
+wasm-bridge = { git = "https://github.com/kajacx/wasm-bridge.git" }
+wasm-bridge-wasi = { git = "https://github.com/kajacx/wasm-bridge.git" }
