fix component lib type

--- a/components/unavi-system/Cargo.toml
+++ b/components/unavi-system/Cargo.toml
@@ -6,7 +6,7 @@ repository.workspace = true
 license.workspace = true
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [lints]
 workspace = true
