implement create-cuboid

--- a/components/unavi-mirror/Cargo.toml
+++ b/components/unavi-mirror/Cargo.toml
@@ -16,3 +16,4 @@ package = "unavi:mirror"
 
 [package.metadata.component.target.dependencies]
 "wired:gltf" = { path = "../../wired-protocol/spatial/wit/wired-gltf" }
+"wired:math" = { path = "../../wired-protocol/spatial/wit/wired-math" }
