--- a/components/unavi-shapes/Cargo.toml
+++ b/components/unavi-shapes/Cargo.toml
@@ -15,4 +15,6 @@ wit-bindgen-rt.workspace = true
 package = "unavi:shapes"
 
 [package.metadata.component.target.dependencies]
+"unavi:log" = { path = "../unavi-log/wit" }
 "wired:gltf" = { path = "../../wired-protocol/spatial/wit/wired-gltf" }
+"wired:math" = { path = "../../wired-protocol/spatial/wit/wired-math" }
