--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ license = "GPL-3.0-or-later"
 type_complexity = "allow"
 
 [workspace.dependencies]
-wired-protocol = { path = "crates/wired-protocol" }
-
+bevy = "0.13.1"
+bevy_async_task = "0.1.0"
+bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.6"
@@ -25,14 +26,13 @@ serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
 wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
 wtransport = "0.1.8"
 
 [profile.dev]
 opt-level = 1
 
-[profile.dev.package."*"]
+[profile.dev.package.bevy]
 opt-level = 3
 
 [profile.release]
