--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -17,7 +17,7 @@ serde.workspace = true
 serde_json.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
-tracing-subscriber.workspace = true
+tracing-subscriber = "0.3.18"
 tracing.workspace = true
-wired-protocol.workspace = true
+wired-protocol = { path = "../wired-protocol" }
 wtransport.workspace = true
