--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,14 @@ license = "GPL-3.0-or-later"
 type_complexity = "allow"
 
 [workspace.dependencies]
+anyhow = "1.0.82"
 bevy = "0.13.1"
 bevy_async_task = "0.1.0"
 bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.6"
+semver = "1.0.22"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
