--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -29,6 +29,9 @@ wasm-bindgen-futures = "0.4.41"
 web-sys = { version = "0.3.68", features = ["Location", "UrlSearchParams", "Window"] }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
+anyhow.workspace = true
+reqwest = "0.11.27"
 self_update = { version = "0.39.0", features = ["archive-zip"] }
+semver.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
