--- a/crates/wired-protocol/Cargo.toml
+++ b/crates/wired-protocol/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 
 [dependencies]
 dwn.workspace = true
-semver = "1.0.22"
+semver.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 
