--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -35,3 +35,4 @@ self_update = { version = "0.39.0", features = ["archive-zip"] }
 semver.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+zip = { version = "1.1.1", default-features = false, features = ["deflate"] }
