--- a/crates/unavi-did/Cargo.toml
+++ b/crates/unavi-did/Cargo.toml
@@ -10,3 +10,8 @@ workspace = true
 
 [dependencies]
 bevy.workspace = true
+bevy_async_task.workspace = true
+dwn.workspace = true
+serde_json.workspace = true
+surrealdb.workspace = true
+wired-protocol = { path = "../wired-protocol" }
