rename unavi-did -> unavi-dwn

--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -14,7 +14,7 @@ bevy_xpbd_3d.workspace = true
 clap.workspace = true
 dwn.workspace = true
 tracing.workspace = true
-unavi-did = { path = "../unavi-did" }
+unavi-dwn = { path = "../unavi-dwn" }
 unavi-networking = { path = "../unavi-networking" }
 unavi-player = { path = "../unavi-player" }
 unavi-scripting = { path = "../unavi-scripting" }
