--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -5,6 +5,10 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[features]
+default = []
+self_update = ["dep:self_update"]
+
 [lints]
 workspace = true
 
@@ -31,7 +35,7 @@ web-sys = { version = "0.3.68", features = ["Location", "UrlSearchParams", "Wind
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 anyhow.workspace = true
 reqwest = "0.11.27"
-self_update = { version = "0.39.0", features = ["archive-zip"] }
+self_update = { version = "0.39.0", features = ["archive-zip"], optional = true }
 semver.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
