--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
+web-sys = "0.3.68"
 wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
 wtransport = "0.1.8"
 
