--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -30,7 +30,7 @@ surrealdb = { workspace = true, features = ["kv-indxdb"] }
 tokio.workspace = true
 wasm-bindgen = "=0.2.91"
 wasm-bindgen-futures = "0.4.41"
-web-sys = { version = "0.3.68", features = ["Location", "UrlSearchParams", "Window"] }
+web-sys = { workspace = true, features = ["Location", "UrlSearchParams", "Window"] }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 anyhow.workspace = true
