--- a/crates/unavi-player/Cargo.toml
+++ b/crates/unavi-player/Cargo.toml
@@ -14,3 +14,4 @@ bevy-tnua-xpbd3d = "0.4.0"
 bevy.workspace = true
 bevy_xpbd_3d.workspace = true
 unavi-world = { path = "../unavi-world" }
+web-sys = { workspace = true, features = ["Navigator", "Window"] }
