move web-sys to wasm dep

--- a/crates/unavi-player/Cargo.toml
+++ b/crates/unavi-player/Cargo.toml
@@ -14,4 +14,6 @@ bevy-tnua-xpbd3d = "0.4.0"
 bevy.workspace = true
 bevy_xpbd_3d.workspace = true
 unavi-world = { path = "../unavi-world" }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
 web-sys = { workspace = true, features = ["Navigator", "Window"] }
