--- a/crates/unavi-networking/Cargo.toml
+++ b/crates/unavi-networking/Cargo.toml
@@ -12,6 +12,7 @@ workspace = true
 disable-cert-validation = ["wtransport/dangerous-configuration"]
 
 [dependencies]
+anyhow.workspace = true
 bevy.workspace = true
 bevy_async_task.workspace = true
 xwt = "0.6.0"
