--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
+wasm-bindgen-futures = "0.4.41"
 web-sys = "0.3.68"
 wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
 wtransport = "0.1.8"
@@ -47,5 +48,6 @@ codegen-units = 1
 opt-level = "z"
 
 [patch.crates-io]
+dwn = { git = "https://github.com/unavi-xyz/dwn.git" }
 wasm_component_layer = { git = "https://github.com/kayhhh/wasm_component_layer.git" }
 wasm_runtime_layer = { git = "https://github.com/kayhhh/wasm_runtime_layer.git" }
