--- a/crates/unavi-networking/Cargo.toml
+++ b/crates/unavi-networking/Cargo.toml
@@ -8,18 +8,18 @@ edition.workspace = true
 [lints]
 workspace = true
 
-[features]
-disable-cert-validation = ["wtransport/dangerous-configuration"]
-
 [dependencies]
 anyhow.workspace = true
 bevy.workspace = true
 bevy_async_task.workspace = true
-xwt = "0.13.0"
-xwt-core = "0.4.0"
+tracing.workspace = true
+unavi-world = { path = "../unavi-world" }
+xwt-core = "0.4.1"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen-futures.workspace = true
 xwt-web-sys = "0.11.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 wtransport.workspace = true
+xwt-wtransport = "0.7.0"
