--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -6,18 +6,9 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-axum = "0.7.5"
-axum-server = "0.6.0"
 clap.workspace = true
-didkit.workspace = true
-dwn-server = "0.0.8"
-dwn.workspace = true
-rcgen = "0.13.0" 
-serde.workspace = true
-serde_json.workspace = true
-surrealdb = { workspace = true, features = ["kv-surrealkv"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tracing-subscriber = "0.3.18"
 tracing.workspace = true
-wired-protocol = { path = "../wired-protocol" }
-wtransport.workspace = true
+unavi-server-social = { path = "../unavi-server-social" }
+unavi-server-world = { path = "../unavi-server-world" }
