--- a/crates/unavi-social-server/Cargo.toml
+++ b/crates/unavi-social-server/Cargo.toml
@@ -1,15 +1,14 @@
 [package]
-name = "unavi-server-social"
+name = "unavi-social-server"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-axum = "0.7.5"
-axum-server = "0.6.0"
+axum-server.workspace = true
+axum.workspace = true
 clap.workspace = true
-didkit.workspace = true
 dwn-server = "0.0.8"
 dwn.workspace = true
 serde.workspace = true
