--- a/crates/unavi-world-server/Cargo.toml
+++ b/crates/unavi-world-server/Cargo.toml
@@ -1,13 +1,19 @@
 [package]
-name = "unavi-server-world"
+name = "unavi-world-server"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
 [dependencies]
+axum-server.workspace = true
+axum.workspace = true
 clap.workspace = true
+didkit.workspace = true
+dwn.workspace = true
 rcgen = "0.13.1"
+serde.workspace = true
+serde_json.workspace = true
 tokio.workspaced = true
 tracing.workspace = true
 wired-protocol = { path = "../wired-protocol" }
