--- a/crates/unavi-world-host/Cargo.toml
+++ b/crates/unavi-world-host/Cargo.toml
@@ -9,12 +9,11 @@ edition.workspace = true
 axum-server.workspace = true
 axum.workspace = true
 base64.workspace = true
-clap.workspace = true
 didkit.workspace = true
 dwn.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 surrealdb = { workspace = true, features = ["kv-surrealkv"] }
-tokio.workspaced = true
+tokio.workspace = true
 tracing.workspace = true
 wired-protocol = { path = "../wired-protocol" }
