--- a/crates/unavi-world-host/Cargo.toml
+++ b/crates/unavi-world-host/Cargo.toml
@@ -13,7 +13,7 @@ didkit.workspace = true
 dwn.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-surrealdb = { workspace = true, features = ["kv-surrealkv"] }
+surrealdb = { workspace = true, features = ["kv-mem", "kv-surrealkv"] }
 tokio.workspace = true
 tracing.workspace = true
 wired-protocol = { path = "../wired-protocol" }
