fix world host querying

--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -10,11 +10,13 @@ clap.workspace = true
 tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
 tracing-subscriber = "0.3.18"
 tracing.workspace = true
-serde.workspace = true
 unavi-social-server = { path = "../unavi-social-server" }
 unavi-world-host = { path = "../unavi-world-host" }
 unavi-world-server = { path = "../unavi-world-server" }
 
 [dev-dependencies]
+dwn.workspace = true
 port_scanner = "0.1.5"
+surrealdb = { workspace = true, features = ["kv-mem"] }
 tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
+wired-protocol = { path = "../wired-protocol" }
