server fixes + add WebTransport test

--- a/crates/unavi-world-server/Cargo.toml
+++ b/crates/unavi-world-server/Cargo.toml
@@ -6,7 +6,7 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-rcgen = "0.13.1"
+anyhow.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 wtransport.workspace = true
