--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -20,3 +20,4 @@ port_scanner = "0.1.5"
 surrealdb = { workspace = true, features = ["kv-mem"] }
 tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
 wired-protocol = { path = "../wired-protocol" }
+wtransport = { workspace = true, features = ["dangerous-configuration"] }
