--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.8"
+reqwest = "0.11.27"
 semver = "1.0.22"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
