--- a/crates/wired-social/Cargo.toml
+++ b/crates/wired-social/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wired-protocol"
+name = "wired-social"
 version.workspace = true
 license.workspace = true
 repository.workspace = true
