--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,8 @@ concurrency:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    # Must be ubuntu-20.04, see https://github.com/actions/runner-images/issues/6709
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
         with:
