--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ base64 = "0.22.0"
 bevy = "0.13.1"
 bevy_async_task = "0.1.0"
 bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
+capnp = "0.19.4"
+capnp-rpc = "0.19.1"
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.8"
@@ -36,6 +38,8 @@ wasm-bindgen-futures = "0.4.41"
 web-sys = "0.3.68"
 wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
 wtransport = "0.1.8"
+xwt-core = "0.4.1"
+xwt-wtransport = "0.7.0"
 
 [profile.dev]
 opt-level = 1
