--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
+wasm-bindgen = "=0.2.91"
 wasm-bindgen-futures = "0.4.41"
 web-sys = "0.3.68"
 wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }
