--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: Swatinem/rust-cache@v2
 
-      - run: nix develop -c nix run .?submodules=1#check-components
+      - run: nix run .?submodules=1#check-components
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: generate component bindings"
@@ -45,7 +45,7 @@ jobs:
           message: "chore: lint"
           default_author: github_actions
 
-      - run: nix develop -c nix run .#generate-readme
+      - run: nix run .#generate-readme
       - uses: EndBug/add-and-commit@v9
         with:
           message: "chore: generate README"
