--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ reqwest = "0.11.27"
 semver = "1.0.22"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
-surrealdb = { version = "1.3.1", default-features = false }
+surrealdb = { version = "=1.4.2", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
 wasm-bindgen = "=0.2.91"
