--- a/crates/xwt-futures-io/Cargo.toml
+++ b/crates/xwt-futures-io/Cargo.toml
@@ -6,5 +6,7 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 futures-io = "0.3.30"
+tracing.workspace = true
 xwt-core.workspace = true
