--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,7 @@ concurrency:
 
 jobs:
   deploy:
-    # Must be ubuntu-20.04, see https://github.com/actions/runner-images/issues/6709
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: AdityaGarg8/remove-unwanted-software@v3
         with:
@@ -65,6 +64,14 @@ jobs:
         with:
           message: "chore: update terraform output"
           default_author: github_actions
+
+      - name: Build server
+        if: inputs.disable-deploy != true
+        run: nix build .?submodules=1#unavi-server
+
+      - name: Build web
+        if: inputs.disable-deploy != true
+        run: nix build .?submodules=1#unavi-web
 
       - name: Deploy
         if: inputs.disable-deploy != true
